--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cesiumjs.org/releases/1.54/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
-  <div id="cesiumContainer" class="fullSize"></div>
+  <div id="cesiumContainer" style="width=device-width, height=device-height"></div>
   <div id="loadingOverlay"><h1>Loading...</h1></div>
 <div id="toolbar"></div>
   <script>
