--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <title>scan</title>
   <script src="https://cesiumjs.org/releases/1.54/Build/Cesium/Cesium.js"></script>
   <link href="https://cesiumjs.org/releases/1.54/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
-  <div id="cesiumContainer" style="width=device-width, height=100px"></div>
+  <div id="cesiumContainer"></div>
   <div id="loadingOverlay"><h1>Loading...</h1></div>
 <div id="toolbar"></div>
   <script>
