--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -61,7 +61,7 @@ var viewer = new Cesium.Viewer('cesiumContainer', {
 
 var tileset = viewer.scene.primitives.add(
     new Cesium.Cesium3DTileset({
-        url: Cesium.IonResource.fromAssetId(11506),
+        url: Cesium.IonResource.fromAssetId(16312),
         maximumMemoryUsage:128,
         maximumScreenSpaceError: 9,
         pointCloudShading: new Cesium.PointCloudShading({attenuation:true,
