--- a/index.html
+++ b/index.html
@@ -7,31 +7,8 @@
     <title>Торатау</title>
     <script src="https://cesiumjs.org/releases/1.54/Build/Cesium/Cesium.js"></script>
   <style>
-      @import url(../Build/Cesium/Widgets/widgets.css);
-      #cesiumContainer {
-          position: absolute;
-          top: 0;
-          left: 0;
-          height: 100%;
-          width: 100%;
-          margin: 0;
-          overflow: hidden;
-          padding: 0;
-          font-family: sans-serif;
-      }
-      html {
-        height: 100%;
-      }
-      body {
-          padding: 0;
-          margin: 0;
-          overflow: hidden;
-          height: 100%;
-      html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-      }
+      @import url(https://cesiumjs.org/releases/1.54/Build/Cesium/Widgets/widgets.css);
   </style>
-  <link href="https://cesiumjs.org/releases/1.54/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
   <div id="cesiumContainer" class="fullSize"></div>
