--- a/index.html
+++ b/index.html
@@ -8,30 +8,53 @@
     <script src="https://cesiumjs.org/releases/1.54/Build/Cesium/Cesium.js"></script>
   <style>
       @import url(https://cesiumjs.org/releases/1.54/Build/Cesium/Widgets/widgets.css);
+      @import url(https://yanpogutsa.github.io/css/BaseLayerPicker.css);
   </style>
 </head>
 <body>
   <div id="cesiumContainer" class="fullSize"></div>
+  <div id="baseLayerPickerContainer" style="position:absolute;top:24px;right:24px;width:38px;height:38px;"></div>
   <script>
    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI0ODRjNjcyZC02MWNiLTRiMjktODUwMi01ZjRhNTg0ODRiZmMiLCJpZCI6MzIwLCJpYXQiOjE1MjUyMjExOTF9.2WKC_dGzCKPCqdn051lh2MjiP85suxaOtYfnqb5dTzI';
 
-var viewer = new Cesium.Viewer('cesiumContainer', {
-                    selectionIndicator:   false,
-                    infoBox:              false,
-                    scene3DOnly:          true,
-                    sceneModePicker:      false,
-                    fullscreenButton:     true,
-                    homeButton:           false,
-                    baseLayerPicker:      false,
-                    animation:            false,
-                    timeline:             false,
-                    geocoder:             false,
-                    navigationHelpButton: false,
-                    imageryProvider:      new Cesium.MapboxImageryProvider({
-    mapId: 'mapbox.light',
-    accessToken: 'pk.eyJ1IjoieWFucG9ndXRzYSIsImEiOiJjajBhMzJydzIwZmtmMndvY3ozejFicTdqIn0.T6DCFk1BSoEkdG-2agIoQQ'
-}),
-    skyBox: new Cesium.SkyBox({show: false}),
+    var imageryViewModels = [];
+ imageryViewModels.push(new Cesium.ProviderViewModel({
+     name : 'Mapbox Светлая',
+     iconUrl : 'https://raw.githubusercontent.com/mapbox/mapbox-studio-light.tm2/master/.thumb.png',
+     tooltip : '',
+     creationFunction : function() {
+         return new Cesium.MapboxImageryProvider({ mapId: 'mapbox.light',
+    accessToken: 'pk.eyJ1IjoieWFucG9ndXRzYSIsImEiOiJjajBhMzJydzIwZmtmMndvY3ozejFicTdqIn0.T6DCFk1BSoEkdG-2agIoQQ' })      
+         ;}
+ }));
+
+ imageryViewModels.push(new Cesium.ProviderViewModel({
+     name : 'Mapbox Тёмная',
+     iconUrl : 'https://raw.githubusercontent.com/mapbox/mapbox-studio-dark.tm2/master/.thumb.png',
+     tooltip : '',
+     creationFunction : function() {
+         return new Cesium.MapboxImageryProvider({ mapId: 'mapbox.dark',
+    accessToken: 'pk.eyJ1IjoieWFucG9ndXRzYSIsImEiOiJjajBhMzJydzIwZmtmMndvY3ozejFicTdqIn0.T6DCFk1BSoEkdG-2agIoQQ' })        
+         ;}
+ }));
+
+imageryViewModels.push(new Cesium.ProviderViewModel({
+     name : 'Bing спутник',
+     iconUrl : Cesium.buildModuleUrl('https://cesiumjs.org/Cesium/Source/Widgets/Images/ImageryProviders/bingAerial.png'),
+     tooltip : '',
+     creationFunction : function() {
+         return new Cesium.IonImageryProvider({ assetId: 2 });
+     }
+ }));
+
+
+
+var cesiumWidget = new Cesium.CesiumWidget('cesiumContainer', { imageryProvider: false, skyBox: new Cesium.SkyBox({show: false}) });
+
+var layers = cesiumWidget.imageryLayers;
+var baseLayerPicker = new Cesium.BaseLayerPicker('baseLayerPickerContainer', {
+    globe : cesiumWidget.scene.globe,
+    imageryProviderViewModels : imageryViewModels
 });
 
 
