--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 var viewer = new Cesium.Viewer('cesiumContainer', {
                     selectionIndicator:   false,
                     infoBox:              false,
-                    scene3DOnly:          true,
-                    sceneModePicker:      false,
+                    scene3DOnly:          false,
+                    sceneModePicker:      true,
                     fullscreenButton:     true,
                     homeButton:           false,
                     baseLayerPicker:      false,
