--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 var viewer = new Cesium.Viewer('cesiumContainer', {
                     selectionIndicator:   false,
                     infoBox:              false,
-                    scene3DOnly:          false,
-                    sceneModePicker:      true,
+                    scene3DOnly:          true,
+                    sceneModePicker:      false,
                     fullscreenButton:     true,
                     homeButton:           false,
-                    baseLayerPicker:      false,
+                    baseLayerPicker:      true,
                     animation:            false,
                     timeline:             false,
                     geocoder:             false,
