--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Торатау</title>
     <script src="https://cesiumjs.org/releases/1.54/Build/Cesium/Cesium.js"></script>
   <style>
+      @import url(https://yanpogutsa.github.io/css/BaseLayerPicker.css);
       @import url(../Build/Cesium/Widgets/widgets.css);
       #cesiumContainer {
           position: absolute;
