--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var imageryViewModels = [];
 
 imageryViewModels.push(new Cesium.ProviderViewModel({
      name : 'Mapbox спутник',
-     iconUrl : Cesium.buildModuleUrl('https://cesiumjs.org/Cesium/Source/Widgets/Images/ImageryProviders/mapboxSatellite.png'),
+     iconUrl : Cesium.buildModuleUrl('https://cdn-images-1.medium.com/max/1600/0*V49vR7atoMk_uiTC.jpg'),
      tooltip : '',
      creationFunction : function() {return new Cesium.MapboxImageryProvider({ mapId: 'mapbox.satellite',
     accessToken: 'pk.eyJ1IjoieWFucG9ndXRzYSIsImEiOiJjajBhMzJydzIwZmtmMndvY3ozejFicTdqIn0.T6DCFk1BSoEkdG-2agIoQQ' })
