--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ var viewer = new Cesium.Viewer('cesiumContainer', {
                     geocoder:             false,
                     navigationHelpButton: false,
                     imageryProvider:      false,
+                    projectionPicker :    true,
                     skyBox: new Cesium.SkyBox({show: false}),
 });
 
